311025/Q5/fubar-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fubar
  labels:
    purpose: fubar
