311025/Q5/internal-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal
  labels:
    purpose: internal
