311025/Q5/fubar-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fubar-server
  namespace: fubar
  labels:
    app: fubar-server
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 9000
