311025/Q5/allow-port-from-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-port-from-namespace
  namespace: fubar
spec: 
  podSelector: {}
  policyTypes: 
  - Ingress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            purpose: internal
    ports:
      - protocol: TCP
        port: 9000
